--- a/src/main/webapp/css/t.css
+++ b/src/main/webapp/css/t.css
@@ -49,3 +49,8 @@
 	padding-left: 15px;
 	padding-bottom: 15px;
 }
+
+.selectItem .form-control-feedback {
+    top: 0;
+    right: -15px !important;
+}
