--- a/src/main/webapp/css/message.css
+++ b/src/main/webapp/css/message.css
@@ -54,3 +54,9 @@
     top: 0;
     right: -15px !important;
 }
+
+.dialog-footer {
+	padding: 15px;
+	text-align: right;
+	border-top: 1px solid #e5e5e5;
+}
