--- a/src/main/webapp/css/message.css
+++ b/src/main/webapp/css/message.css
@@ -63,3 +63,10 @@
 .cursor{
 	cursor: pointer;
 }
+.table td a{
+  max-width:100px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: inline-block;
+}
