--- a/src/main/webapp/css/message.css
+++ b/src/main/webapp/css/message.css
@@ -98,6 +98,14 @@
 	border-top: 1px solid #e5e5e5;
 }
 
+.dialog-footer:after {
+clear:both;
+}
+.dialog-footer:before, .dialog-footer:after {
+display: table;
+content: " ";
+}
+
 .cursor {
 	cursor: pointer;
 }
