--- a/src/main/webapp/wap/css/yun.css
+++ b/src/main/webapp/wap/css/yun.css
@@ -119,16 +119,23 @@
 /*-----End Forget Password*/
 
 /*Start Index*/
-.menu ul li {
+.menu {
 	margin-top : 20px;
+}
+.menu ul li {
 	padding: 0 10px;
 	height: 40px;
 	line-height: 40px;
 	border-bottom: 1px solid #ccc;
 	border-top: 1px solid #fff;
-	background-color: #fafafa;
 	font-size: 16px;
 }
+
+.menu ul li a{
+	width:90%;
+	display: inline-block;
+}
+
 .menu .fa-angle-right {
 	line-height: 40px;
 }
