--- a/src/main/webapp/wap/css/yun.css
+++ b/src/main/webapp/wap/css/yun.css
@@ -118,9 +118,9 @@
 
 /*-----End Forget Password*/
 
-/*Start Index*/
+/*Start Index And Message*/
 .menu {
-	margin-top : 20px;
+	margin-top : 0px;
 }
 .menu ul li {
 	padding: 0 10px;
@@ -139,7 +139,7 @@
 #wrapper {
 	position: absolute;
 	z-index: 1;
-	top: 45px;
+	top: 0px;
 	bottom: 48px;
 	left: 0;
 	width: 100%;
@@ -184,32 +184,61 @@
 	background-color: #fafafa;
 	font-size: 16px;
 }
-.pullDownLabel, .pullUpLabel {color:#999};
-		.pullDown, .pullUp {background:#fff;height:40px;line-height:40px;font-weight:bold;font-size:0.8em;color:#888}
-		.pullDown .pullDownIcon, .pullUp .pullUpIcon {display:block;float:left;opacity:0.4;height:40px;background:url(pull_to_refresh.png) 0 0 no-repeat;-webkit-background-size:40px 80px;-ms-background-size:40px 80px; background-size:40px 80px;-webkit-transition-property:-webkit-transform;-ms-transition-property:-webkit-transform;-webkit-transition-duration:250ms;-ms-transition-duration:250ms}
-		.pullDown .pullDownIcon {-webkit-transform:rotate(0deg) translateZ(0);-ms-transform:rotate(0deg) translateZ(0)}
-		.pullUp .pullUpIcon  {-webkit-transform:rotate(-180deg) translateZ(0);-ms-transform:rotate(-180deg) translateZ(0)}
-		.pullDown.flip .pullDownIcon {-webkit-transform:rotate(-180deg) translateZ(0);-ms-transform:rotate(-180deg) translateZ(0)}
-		.pullUp.flip .pullUpIcon {-webkit-transform:rotate(0deg) translateZ(0);-ms-transform:rotate(0deg) translateZ(0)}
-		.pullDown.loading .pullDownIcon, .pullUp.loading .pullUpIcon {background-position:0 100%;-webkit-transform:rotate(0deg) translateZ(0);-ms-transform:rotate(0deg) translateZ(0);-webkit-transition-duration:0ms;-ms-transition-duration:0ms;-webkit-animation-name:loading;-ms-animation-name:loading;-webkit-animation-duration:1s;-ms-animation-duration:1s;-webkit-animation-iteration-count:infinite;-ms-animation-iteration-count:infinite;-webkit-animation-timing-function:linear;-ms-animation-timing-function:linear};
+.pullDownLabel, .pullUpLabel {color:#999}
+.pullDown, .pullUp {background:#fff;height:40px;line-height:40px;font-weight:bold;font-size:0.8em;color:#888; margin: 0 auto;width: 50%;}
+.pullDown .pullDownIcon, .pullUp .pullUpIcon {display:block;float:left;opacity:0.4;width: 40px;height:40px;background:url(../../images/pull_to_refresh.png) 0 0 no-repeat;-webkit-background-size:40px 80px;-ms-background-size:40px 80px; background-size:40px 80px;-webkit-transition-property:-webkit-transform;-ms-transition-property:-webkit-transform;-webkit-transition-duration:250ms;-ms-transition-duration:250ms}
+.pullDown .pullDownIcon {-webkit-transform:rotate(0deg) translateZ(0);-ms-transform:rotate(0deg) translateZ(0)}
+.pullUp .pullUpIcon  {-webkit-transform:rotate(-180deg) translateZ(0);-ms-transform:rotate(-180deg) translateZ(0)}
+.pullDown.flip .pullDownIcon {-webkit-transform:rotate(-180deg) translateZ(0);-ms-transform:rotate(-180deg) translateZ(0)}
+.pullUp.flip .pullUpIcon {-webkit-transform:rotate(0deg) translateZ(0);-ms-transform:rotate(0deg) translateZ(0)}
+.pullDown.loading .pullDownIcon, .pullUp.loading .pullUpIcon {background-position:0 100%;-webkit-transform:rotate(0deg) translateZ(0);-ms-transform:rotate(0deg) translateZ(0);-webkit-transition-duration:0ms;-ms-transition-duration:0ms;-webkit-animation-name:loading;-ms-animation-name:loading;-webkit-animation-duration:1s;-ms-animation-duration:1s;-webkit-animation-iteration-count:infinite;-ms-animation-iteration-count:infinite;-webkit-animation-timing-function:linear;-ms-animation-timing-function:linear}
 		
-		@-webkit-keyframes loading {
-			from {-webkit-transform:rotate(0deg) translateZ(0)}
-			to {-webkit-transform:rotate(360deg) translateZ(0)}
-		}
-		@-ms-keyframes loading {
-			from {-ms-transform:rotate(0deg) translateZ(0)}
-			to {-ms-transform:rotate(360deg) translateZ(0)}
-		}
+@-webkit-keyframes loading {
+from {-webkit-transform:rotate(0deg) translateZ(0)}
+to {-webkit-transform:rotate(360deg) translateZ(0)}
+}
+@-ms-keyframes loading {
+	from {-ms-transform:rotate(0deg) translateZ(0)}
+	to {-ms-transform:rotate(360deg) translateZ(0)}
+}
 
 .menu .fa {
 	line-height: 40px;
 }
 #list .detail {
 	font-size: 12px;
-	margin-left:10px;
 	line-height : 20px;
+	border-top: 1px solid #ccc;
 }
 #list .detail div{
 	margin-bottom : 5px;
+	margin-left:10px;
+}
+
+#list .detail div:first-child{
+	margin-top : 5px;
+}
+
+#list .detail .detail-item-c{
+	margin-left : 15px;
+}
+/*---End Index And Message---*/
+
+.busy-layer {
+    height: 100%;
+    width: 100%;
+    background: transparent;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 999;
+}
+.busy-layer .busy-text {
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    margin-top: 150px;
+}
+.busy-layer .busy-text img {
+	background:url(../../images/loading.gif) 0 0 no-repeat;
 }
